--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
